<resources>
    <string name="app_name">Mobile Asset Inspection</string>

    <string name="menu_visita">Visitas</string>
    <string name="menu_sync">Sincronização</string>
    <string name="menu_config">Configurações</string>

    <string name="password">Senha</string>
    <string name="user">Usuário</string>
    <string name="login">ENTRAR</string>
    <string name="confirm">CONFIRMAR</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCELAR</string>
    <string name="logout">LOGOUT</string>
    <string name="exit_app">Sair do aplicativo</string>
    <string name="language_pt">Português (Brasil)</string>
    <string name="language_en">Inglês</string>
...
    <string name="ico_password">icon password</string>
    <string name="ico_more_info">icon + info</string>
    <string name="ico_inspections">icon inspeções</string>
    <string name="ico_maps">icon maps</string>
    <string name="ico_empty">icon lista vazia</string>
    <string name="view">VER</string>
    <string name="more_info">+INFOS</string>
    <string name="open">ACESSAR</string>
    <string name="inspection">INSPEÇÕES</string>
    <string name="empty_list">Você não tem visitas agendadas</string>
    <string name="confirm_open_maps">Deseja abrir este endereço\nem outro aplicativo?</string>
    <string name="workorder_title">CRIAR VISITA</string>
    <string name="workorder_subtitle">Preencha os dados abaixo para criar\numa nova visita a partir de projeto</string>
...
