<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/selector_dialog_confirm"
                    android:textColor="@android:color/white"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/ok" />
            </LinearLayout>
        </LinearLayout>



</RelativeLayout>