...
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="300dp"
            android:layout_height="54dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textSize="23sp"
            android:background="@drawable/box_button_login"
...
